# market-making-paper-replication

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  experiment.md
.github/workflows/: ci.yml  docs.yml
api/: index.html
docs/: experiments.md  feature_engineering.md  hypotheses.md  index.md  paper_overview.md  progress.md  replication_framework.md
docs/api/: index.md
docs/notebooks/: index.md
experiments/: index.html
hypotheses/: index.html
hypothesis/: index.html
notebooks/: 01_data_exploration.ipynb  02_feature_engineering.ipynb  index.html  rds_data_converter.ipynb
paper_overview/: index.html
progress/: index.html
replication_framework/: index.html
search/: search_index.json
src/paper_replication/: A-S_main.R  A-S_strategy.R  __init__.py  utils.py
src/paper_replication/features/: __init__.py  config.py  dataset.py  dynamic_state.py  labels.py  lob_state.py
src/paper_replication/python_code/: A-S_main.py  A-S_strategy.py
src/paper_replication/r_code/: backtest.R  param_sweep.R  test_strategy.R
src/paper_replication/rl/: __init__.py  data.py  env.py  model.py  train.py
tests/: test_features_dataset.py  test_features_dynamic_state.py  test_features_labels.py  test_features_lob_state.py  test_rl.py  test_utils.py
