[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "paper-replication"
version = "0.1.0"
description = "Replication of [Paper Title]"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "isort>=5.13",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "nbstripout>=0.7",
    "nbqa>=1.8",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
]

# ── black ──────────────────────────────────────────────────────────────────────
[tool.black]
line-length = 88
target-version = ["py310"]

# ── isort ─────────────────────────────────────────────────────────────────────
[tool.isort]
profile = "black"
line_length = 88

# ── mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=70"

# ── ruff (linting — non-blocking but reported) ────────────────────────────────
[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
